--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tauri-apps/api": "^1.2.0",
     "sass": "^1.59.2",
     "vue": "^3.2.45",
+    "vue-router": "^4.1.6",
     "vuetify": "^3.1.4",
     "webfontloader": "^1.6.28"
   },
