--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuetify": "^3.1.4",
     "webfontloader": "^1.6.28"
   },
