--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdi/font": "^7.1.96",
     "@tauri-apps/api": "^1.2.0",
     "axios": "^1.3.4",
+    "pinia": "^2.0.33",
     "sass": "^1.59.2",
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.2.45",
