--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.4",
     "pinia": "^2.0.33",
     "sass": "^1.59.2",
+    "vee-validate": "^4.8.3",
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
