--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue-router": "^4.1.6",
     "vue-toastification": "^2.0.0-rc.5",
     "vuetify": "^3.1.4",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.2.2",
