--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tauri-apps/api": "^1.2.0",
     "@types/webfontloader": "^1.6.35",
     "axios": "^1.3.4",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.33",
     "sass": "^1.59.2",
     "vee-validate": "^4.8.3",
