--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mdi/font": "^7.1.96",
     "@tauri-apps/api": "^1.2.0",
+    "@types/lodash": "^4.14.198",
     "@types/webfontloader": "^1.6.35",
     "axios": "^1.3.4",
     "lodash": "^4.17.21",
