--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "lodash": "^4.17.21",
     "pinia": "^2.0.33",
     "sass": "^1.59.2",
+    "showdown": "^2.1.0",
     "vee-validate": "^4.8.3",
+    "vite-plugin-require": "^1.1.11",
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.4",
     "vue-router": "^4.1.6",
