--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/lodash": "^4.14.198",
     "@types/webfontloader": "^1.6.35",
     "axios": "^1.3.4",
+    "cropperjs": "^1.6.1",
     "lodash": "^4.17.21",
     "pinia": "^2.0.33",
     "sass": "^1.59.2",
